--- a/sks.css
+++ b/sks.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: whitesmoke;
+    background: black;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -22,7 +22,7 @@ body {
 h2 {
     text-align: center;
     font-size: 1.5em;
-    color: #e94d58;
+    color: #ba0916;
     margin: 15px 0;
 }
 .btn-group {
@@ -36,7 +36,7 @@ button {
     position: absolute;
     width: 150px;
     height: inherit;
-    color: white;
+    color: black;
     font-size: 1.2em;
     border-radius: 30px;
     outline: none;
@@ -47,7 +47,7 @@ button {
 }
 button:nth-child(1) {
     margin-left: -200px;
-    background: #e94d58;
+    background: #ba0916;
 }
 button:nth-child(2) {
     margin-right: -200px;
