--- a/sks.css
+++ b/sks.css
@@ -51,7 +51,7 @@ button:nth-child(1) {
 }
 button:nth-child(2) {
     margin-right: -200px;
-    background: white;
+    background: black;
     color: #e94d58;
 }
 }
