--- a/sks.css
+++ b/sks.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: black;
+    background: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -51,7 +51,7 @@ button:nth-child(1) {
 }
 button:nth-child(2) {
     margin-right: -200px;
-    background: black;
+    background: pink;
     color: #e94d58;
 }
 }
