--- a/sks.css
+++ b/sks.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: white;
+    background: whitesmoke;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
